2008-08-22  Ulrich Weigand  <uweigand@de.ibm.com>

	* spu-tdep.c (spu_overlay_new_objfile): Only consider SPU objfiles.
	(info_spu_event_command): Command only supported on SPU architecture.
	(info_spu_signal_command): Likewise.
	(info_spu_mailbox_command): Likewise.
	(info_spu_dma_command): Likewise.
	(info_spu_proxydma_command): Likewise.

2008-08-22  Ulrich Weigand  <uweigand@de.ibm.com>

	* infrun.c (adjust_pc_after_break): Do not call get_thread_regcache
	if the thread has already exited.

2008-08-22  Pedro Alves  <pedro@codesourcery.com>

	* infrun.c (proceed): Move back setting previous_inferior_ptid
	from here ...
	(wait_for_inferior): ... to here.
	(fetch_inferior_event): ... and here.

2008-08-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* gdbarch.sh: Include "regcache.h" into gdbarch.c.
	(deprecated_current_gdbarch_select_hack): Call registers_changed
	instead of reinit_frame_cache.
	* gdbarch.c: Regenerate.

2008-08-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* elfread.c (elf_symtab_read): Do not relocate thread-local symbols.

2008-08-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* xcoffread.c (SYMNAME_ALLOC): Correct syntax.

2008-08-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* findvar.c (locate_var_value): Do not call get_frame_arch
	with a NULL frame argument.

2008-08-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* frame.h (frame_map_regnum_to_name): Remove prototype.
	(frame_map_name_to_regnum): Remove prototype.
	* frame.c (frame_map_regnum_to_name): Remove.
	(frame_map_name_to_regnum): Remove.
	(frame_unwind_register_value): Use user_reg_map_regnum_to_name
	instead of frame_map_regnum_to_name.
	* ax-gdb.c: Include "user-regs.h".
	(gen_expr): Use user_reg_map_name_to_regnum instead of
	frame_map_name_to_regnum.
	* eval.c:  Include "user-regs.h".
	(evaluate_subexp_standard): Use user_reg_map_name_to_regnum
	instead of frame_map_name_to_regnum.
	* infcmd.c (registers_info): Likewise.
	* parse.c: Include "user-regs.h".